# ChangeLog for xfce-extra/xfce4-quicklauncher
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher/ChangeLog,v 1.24 2007/10/15 16:22:05 drac Exp $

  15 Oct 2007; Samuli Suominen <drac@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  arm stable.

  14 Oct 2007; Markus Rothe <corsair@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  Stable on ppc64; bug #195250

  10 Oct 2007; Lars Weiler <pylon@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  stable ppc, bug #195250

  10 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  alpha/ia64/sparc stable wrt #195250

  09 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  stable x86, bug 195250

  09 Oct 2007; Samuli Suominen <drac@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  Restrict tests as they are not supported by goodies upstream.

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  Stable for HPPA (bug #195250).

  09 Oct 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-quicklauncher-1.9.4.ebuild:
  Stable on amd64 wrt bug #195250

*xfce4-quicklauncher-1.9.4 (23 Sep 2007)

  23 Sep 2007; Christoph Mende <angelos@gentoo.org>
  +xfce4-quicklauncher-1.9.4.ebuild:
  Version bump

  15 Mar 2007; Markus Rothe <corsair@gentoo.org>
  xfce4-quicklauncher-1.9.2.ebuild:
  Stable on ppc64; bug #169987

  12 Mar 2007; Bryan Østergaard <kloeri@gentoo.org>
  xfce4-quicklauncher-1.9.2.ebuild:
  Stable on Alpha + IA64.

  10 Mar 2007; nixnut <nixnut@gentoo.org> xfce4-quicklauncher-1.9.2.ebuild:
  Stable on ppc wrt bug 169987

  10 Mar 2007; Peter Weller <welp@gentoo.org>
  xfce4-quicklauncher-1.9.2.ebuild:
  Keyworded ~x86-fbsd

  10 Mar 2007; Peter Weller <welp@gentoo.org>
  xfce4-quicklauncher-1.9.2.ebuild:
  Stable on amd64 wrt bug 169987

  09 Mar 2007; Jeroen Roovers <jer@gentoo.org>
  xfce4-quicklauncher-1.9.2.ebuild: