@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-quicklauncher
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher/ChangeLog,v 1.24 2007/10/15 16:22:05 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-quicklauncher/ChangeLog,v 1.25 2007/10/26 13:48:31 angelos Exp $
+
+  26 Oct 2007; Christoph Mende <angelos@gentoo.org>
+  xfce4-quicklauncher-1.9.4.ebuild:
+  Fix test suite and unrestrict it
 
   15 Oct 2007; Samuli Suominen <drac@gentoo.org>
   xfce4-quicklauncher-1.9.4.ebuild:
